--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   
   
 
-  <div class="container">
+  <div class="container-fluid">
     <div class="row justify-content-center">
       <div class="col-12 col-lg-12">
         <div class="image-wrapper mb-4">
